tests/language_modules/08_routines/valid/function_call_expression.vf
module FunctionCallExpression

function one() returns Integer
is
    return 1
end one

procedure main()
is
    check one() = 1
end main

end FunctionCallExpression