tests/language_modules/08_routines/invalid_semantics/keyword_function_name.vf
module KeywordFunctionName

function value() returns Integer
is
    return 1
end value

end KeywordFunctionName